[package]
name = "arbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
jupiter-swap-api-client = "0.1.0"
solana-sdk = "1.18.12"
dotenv = "0.15.0"
anchor-client = "0.30.0"
env_logger = "0.11.3"
log = "0.4.21"
